--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" 
+    href="
+    https://static-00.iconduck.com/assets.00/plane-globe-icon-2048x2048-meanzqvv.png
+    " 
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Booking App</title>
   </head>
   <body>
     <div id="root"></div>
