--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" 
     href="
-    https://static-00.iconduck.com/assets.00/plane-globe-icon-2048x2048-meanzqvv.png
+    https://i.imgur.com/9ivqhHT.jpg
     " 
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Booking App</title>
+    <title>AirNest</title>
   </head>
   <body>
     <div id="root"></div>
